--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "postcss-import": "^15.1.0",
+    "postcss-nesting": "^11.2.1",
     "react-icons": "^4.8.0",
     "tailwindcss": "^3.2.7"
   }
