--- a/client/package.json
+++ b/client/package.json
@@ -24,11 +24,15 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@react-three/drei": "^9.57.3",
+    "@react-three/fiber": "^8.12.0",
+    "@types/three": "^0.149.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^11.2.1",
     "react-icons": "^4.8.0",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "three": "^0.150.1"
   }
 }
