--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,3 +1,32 @@
 {
-  "extends": ["next/babel", "next/core-web-vitals"]
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "next/babel",
+    "next/core-web-vitals"
+  ],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 2021,
+    "sourceType": "module"
+  },
+  "plugins": ["react"],
+  "rules": {
+    "import/order": [
+      "error",
+      {
+        "groups": [
+          "builtin",
+          "external",
+          "internal",
+          "parent",
+          "sibling",
+          "index"
+        ],
+        "newlines-between": "always-and-inside-groups"
+      }
+    ]
+  }
 }
