--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^11.2.1",
+    "prettier": "^2.8.7",
     "react-icons": "^4.8.0",
     "tailwindcss": "^3.2.7"
   }
