--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -12,7 +12,7 @@
     "ecmaVersion": 2021,
     "sourceType": "module"
   },
-  "plugins": ["react"],
+  "plugins": ["react/recommended"],
   "rules": {
     "import/order": [
       "error",
@@ -24,8 +24,7 @@
           "parent",
           "sibling",
           "index"
-        ],
-        "newlines-between": "always-and-inside-groups"
+        ]
       }
     ]
   }
