--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -12,6 +12,9 @@
     "ecmaVersion": 2021,
     "sourceType": "module"
   },
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true
+  },
   "plugins": ["react/recommended"],
   "rules": {
     "import/order": [
