Dropdown 수정, Lottie 추가, Tab추가

--- a/client/.prettierrc.json
+++ b/client/.prettierrc.json
@@ -1,16 +1,13 @@
 {
-  "tabWidth": 2,
-  "useTabs": false,
   "singleQuote": true,
-  "trailingComma": "es5",
+  "semi": true,
+  "useTabs": false,
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "printWidth": 80,
+  "arrowParens": "always",
+  "orderedImports": true,
+  "bracketSpacing": true,
   "jsxBracketSameLine": false,
-  "arrowParens": "avoid",
-  "importOrder": [
-    "builtin",
-    "external",
-    "internal",
-    "parent",
-    "sibling",
-    "index"
-  ]
+  "endOfLine": "auto"
 }
