--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "framer-motion": "^10.2.5",
-    "next": "13.2.3",
+    "next": "^13.3.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
