--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,12 +18,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "src/lib/context",
-    "./src"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/lib/context"],
   "exclude": ["node_modules"]
 }
