--- a/client/package.json
+++ b/client/package.json
@@ -9,21 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.14.6",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
     "classnames": "^2.3.2",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3",
     "framer-motion": "^10.2.5",
     "next": "^13.3.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-lottie-player": "^1.5.4",
-    "typescript": "4.9.5"
+    "react-lottie-player": "^1.5.4"
+
   },
   "devDependencies": {
+    "eslint": "8.35.0",
+    "eslint-config-next": "13.2.3",
+    "@types/node": "18.14.6",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "typescript": "4.9.5",
     "@react-three/drei": "^9.57.3",
     "@react-three/fiber": "^8.12.0",
     "@types/three": "^0.149.0",
